<resources>
    <string name="app_name">Project4AuthAPI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Age">Age</string>
    <string name="Weight">Weight</string>
    <string name="Address">Address</string>
</resources>